<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/partOne"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    card_view:cardBackgroundColor="#ced3d6"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_event_list_selector"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/monthOfDay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            card_view:cardBackgroundColor="@android:color/holo_blue_light"
            android:elevation="3dp"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@drawable/bg_date_button"

                >

                <TextView
                    android:id="@+id/dayOfMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/testDate"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/dayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/testDay"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/eventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/testTime" />

            <TextView
                android:id="@+id/event_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/eventTime"
                android:layout_toStartOf="@id/eventTime"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingBottom="8dp"
                android:text="@string/test_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <TextView

                android:id="@+id/events_Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_Title"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/test_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"
                android:layout_toStartOf="@+id/notification_Icon"
                android:layout_toLeftOf="@+id/notification_Icon"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notification_Icon"
                android:src="@drawable/ic_notifications_black"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/eventTime"
                android:paddingTop="5dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/type_ofEvent" />

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
