<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="50dp"
    tools:context="com.maseno.franklinesable.politicalapp.log_in_package.LogInFragment"
    >
    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="24dp"
                android:fontFamily="cursive"
                android:text="politics"
                android:textSize="70sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/inp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inp1">

                <android.support.design.widget.TextInputLayout

                    android:id="@+id/passText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        style="@style/TextAppearance.AppCompat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                       android:textSize="18sp"/>

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/visibilityButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/passText"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onClick="visibilityButton"
                    app:srcCompat="@drawable/ic_visibility_black_24dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/warningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inp2"
                android:text="Note: Please be careful about shoulder hacking when the password is displayed"
                android:textColor="#be341c"
                android:visibility="gone"
                 />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/warningText"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/action_sign_in"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_button_states_front"
                />

            <TextView
                android:id="@+id/pass_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_sign_in_button"
                android:onClick="execForgotPassword"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/email_sign_in_button"
                android:onClick="execSignUp"
                android:text="@string/action_sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_login_logo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_login_logo"

                />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>

